# compiler-clox

./: .gitignore  CMakeLists.txt  CloxConfig.h.in  Makefile  README.md  build.zig  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  hello.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  test.cl  test.txt  test2.cl  test3.cl  test4.cl  value.c  value.h  vm.c  vm.h
tests/: test2.cl  test5.cl
